# Cognitive_Modeling_PassiveBCIs

./: .gitignore  README.md  bootstrap.bat  bootstrap.sh  pyproject.toml  run_data_recorder.sh  run_model.sh  run_program.sh  run_tests.sh
Data/2025-05-27_19-19-56_--_2025-05-27_19-20-27/: key_log.csv
Data/2025-05-27_19-24-29_--_2025-05-27_19-24-43/: key_log.csv
Data/2025-05-27_19-31-54_--_2025-05-27_19-31-57/: mouse_log.csv
Data/2025-05-28_19-40-47_--_2025-05-28_19-40-50/: keyboard_log.csv  mouse_log.csv
Data/2025-05-30_20-19-51_--_2025-05-30_20-19-58/: screen_capture.avi
Data/2025-06-02_18-49-53_--_2025-06-02_18-50-00/: mouse_log.csv
Data/2025-06-02_18-56-49_--_2025-06-02_18-56-55/: webcam_capture.avi
Data/2025-06-02_19-12-58_--_2025-06-02_19-13-00/: screen_capture.avi
Data/2025-06-03_15-51-54_--_2025-06-03_15-52-00/: keyboard_log.csv  mouse_log.csv
Data/2025-06-03_17-01-08_--_2025-06-03_17-01-13/: mouse_log.csv  screen_capture.avi  webcam_capture.avi
Debug/: check_dependencies.py  check_poetry_dependencies.py  debug_illegal_instruction.py  run_with_debugging.py
Docs/: Project_Charter.md
Model_Files/: Model.py
Model_Files/Processing_Module/: Screen_Process.py  Webcam_Process.py  config.json
Processing_Module/: Webcam_Process.py
Recording_Module/: Central_Data_Controller.py
Recording_Module/Recorders/: DOM_Handler.py  Handler.py  Keyboard_Mouse_Handler.py  Screen_Handler.py  Screen_Media_Handler.py  Webcam_Handler.py
Tests/User_Interface/: Test_Data_UI.py
User_Interface/: Base_UI.py  Data_UI.py  Data_UI_new.py  Main_App.py  Model_UI.py  Model_UI_new.py
(+5 files in other folders)
