[project]
name = "cognitive-modeling-passivebcis"
version = "1.0"
description = "All the dependencies of the project."
authors = [
    {name = "Prateek",email = "kharanpv@mail.uc.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mss (>=10.0.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
