[tool.poetry]
name = "cognitive-modeling-passivebcis"
version = "1.0"
description = "All the dependencies of the project."
authors = ["Prateek <kharanpv@mail.uc.edu>"]
readme = "README.md"
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pynput = "^1.8.1"
pandas = "^2.2.3"
numpy = "^1.26"
opencv-python = "^4.11.0"
mss = "^10.0.0"
pyautogui = "^0.9.54"
easyocr = "^1.7.2"
torch = "2.2.2"
numpyencoder = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
